--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
   <meta content="description" name="It is my Portfolio" />
   <meta name="google" content="notranslate" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <link rel="icon" href="/assets/favicon.png" />
   <title>Karan's Portfolio</title>
   <link href="./index.css" rel="stylesheet" />
+  <link rel="icon" href="/assets/favicon.png" />
 </head>
 
 <body class="minimal">
+  <div id="loader">
+    <div class="blackhole">
+      <div class="blackhole-circle"></div>
+      <div class="blackhole-disc"></div>
+    </div>
+  
+    <div class="curve">
+      <svg viewBox="0 0 500 500">
+        <path id="loading" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97"></path>
+        <text width="500">
+          <textPath xlink:href="#loading">
+            loading...
+          </textPath>
+        </text>
+      </svg>
+    </div>
+  </div>
   <div id="site-border-left"></div>
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
@@ -68,6 +85,15 @@
       type();
       movingBackgroundImage();
     });
+    document.onreadystatechange = function() {
+      if (document.readyState !== "complete") {
+          document.querySelector("body").style.visibility = "hidden";
+          document.querySelector("#loader").style.visibility = "visible";
+      } else {
+          document.querySelector("#loader").style.display = "none";
+          document.querySelector("body").style.visibility = "visible";
+      }
+    };
   </script>
   <script type="text/javascript" src="./main.js"></script>
 </body>
